--- a/src/ECommerce.Web/Views/Orders/Index.cshtml
+++ b/src/ECommerce.Web/Views/Orders/Index.cshtml
@@ -44,7 +44,8 @@
                         <th>Order Date</th>
                         <th>Items</th>
                         <th>Total Amount</th>
-                        <th>Status</th>
+                        <th>Order Status</th>
+                        <th>Payment Status</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -67,6 +68,11 @@
                             <td>
                                 <span class="@order.StatusBadgeClass">
                                     @order.Status
+                                </span>
+                            </td>
+                            <td>
+                                <span class="@order.PaymentStatusBadgeClass">
+                                    @order.PaymentStatus
                                 </span>
                             </td>
                             <td>
